--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,12 +1,4 @@
 name: Android CI
-
-on:
-  pull_request:
-    branches-ignore:
-      - 'l10n_v3_openjdk2'
-  push:
-    branches-ignore:
-      - 'l10n_v3_openjdk2'
   workflow_dispatch:
 
 jobs:
@@ -16,11 +8,6 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
 
     - name: Get gl4es latest commit hash
       id: gl4es-sha
@@ -49,7 +36,7 @@ jobs:
         git config --global user.email "github-actions@users.noreply.github.com"
         git config --global user.name "github-actions"
         $ANDROID_NDK_HOME/ndk-build NDK_PROJECT_PATH=. APP_BUILD_SCRIPT=./Android.mk
-        cp -R libs/* ../app_pojavlauncher/src/main/jniLibs/
+        cp -R libs/* ../rsdkv5_proj/src/main/jniLibs/
     
     - name: Push gl4es
       if: github.event != 'pull_request' && steps.gl4es-cache.outputs.cache-hit != 'true'
@@ -58,62 +45,15 @@ jobs:
         git add .
         git commit -am "CI: Update gl4es"
         git push
-    
-    - name: Get JRE8
-      uses: dawidd6/action-download-artifact@v2
-      with:
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          workflow: build.yml
-          path: app_pojavlauncher/src/main/assets/components/jre
-          workflow_conclusion: success
-          repo: PojavLauncherTeam/android-openjdk-build-multiarch
-          branch: buildjre8
-          name: jre8-pojav
-    
-    - name: Get JRE17
-      uses: dawidd6/action-download-artifact@v2
-      with:
-          github_token: ${{secrets.GITHUB_TOKEN}}
-          workflow: build.yml
-          path: app_pojavlauncher/src/main/assets/components/jre-new
-          workflow_conclusion: success
-          repo: PojavLauncherTeam/android-openjdk-build-multiarch
-          branch: buildjre17
-          name: jre17-pojav
-    
-    - name: Build JRE JAR files
+
+    - name: Build apk
       run: |
-        cp -R gl4es/libs/* app_pojavlauncher/src/main/jniLibs/
-        chmod +x scripts/languagelist_updater.sh
-        bash scripts/languagelist_updater.sh
-      
-        mkdir -p out
-        chmod +x gradlew
-        ./gradlew clean
-        # Build JRE JAR files (security manager, etc...)
-        ./gradlew :jre_lwjgl3glfw:build
-        
-    - name: Build Google Play .aab
-      if: github.repository_owner == 'PojavLauncherTeam' && github.ref_name == 'v3_openjdk'
-      run: |
-        ./gradlew :app_pojavlauncher:bundleGplay
-        mv app_pojavlauncher/build/outputs/bundle/gplay/app_pojavlauncher-gplay.aab out/app-gplay.aab
-    
-    - name: Build Debug .apk
-      run: |
-        # Build the launcher
-        ./gradlew :app_pojavlauncher:assembleDebug
-        mv app_pojavlauncher/build/outputs/apk/debug/app_pojavlauncher-debug.apk out/app-debug.apk
-        
-    - name: Build APK without runtime
-      run: | 
-        rm -r app_pojavlauncher/src/main/assets/components/jre
-        rm -r app_pojavlauncher/src/main/assets/components/jre-new
-        ./gradlew assembleDebug
-        mv app_pojavlauncher/build/outputs/apk/debug/app_pojavlauncher-debug.apk out/app-debug-noruntime.apk
+        # Build the loader
+        ./gradlew :rsdkv5_proj:assembleDebug
+        mv rsdkv5_proj/build/outputs/apk/debug/rsdkv5_proj-debug.apk out/RSDKv5.apk
         
     - name: Upload APK
       uses: actions/upload-artifact@v2
       with:
           name: app-debug
-          path: out/app-debug.apk
+          path: out/RSDKv5.apk
